Fixed spacing

--- a/src/components/ProfileStatistics/ProfileStatistics.css
+++ b/src/components/ProfileStatistics/ProfileStatistics.css
@@ -5,8 +5,7 @@
     flex-direction: column;
     border: 1px solid grey;
     border-radius: 8px;
-    /* width: 10%;
-    margin: 7px 0 0 20%; */
+    margin-bottom: 10px;
     padding: 15px 12px;
 }
 
