--- a/src/components/ProfileSummary/ProfileSummary.css
+++ b/src/components/ProfileSummary/ProfileSummary.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid grey;
-    /* width: 10%;
-    margin: 15px 0 0 20%; */
+    margin-bottom: 10px;
     padding: 15px 12px;
     font-family: 'Arial', sans-serif;
     border-radius: 8px;
